Fix header alignment

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,140 +1,140 @@
 /* header */
 .header {
-	position        : fixed;
-	z-index         : 3;
-	width           : 100%;
-	border-bottom   : 1px solid rgba(0, 39, 67, .3);
-	background-color: white;
-
+  position: fixed;
+  z-index: 3;
+  width: 100%;
+  border-bottom: 1px solid rgba(0, 39, 67, 0.3);
+  background-color: white;
 }
 
 .header-clearfix {
-	display: block;
-	height : 60px;
+  display: block;
+  height: 60px;
 }
 
 .header ul {
-	overflow  : hidden;
-	margin    : 0;
-	padding   : 0;
-	list-style: none;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 svg:hover #instagram {
-	fill: #ef5419;
+  fill: #ef5419;
 }
 
 .header li a {
-	display        : block;
-	text-decoration: none;
-	color          : #001b44;
+  display: block;
+  text-decoration: none;
+  color: #001b44;
 }
 
 .header .menu-icon:hover,
 .header li a.active,
 .header li a:hover {
-	color: #ef5419;
+  color: #ef5419;
 }
 
 .header li a.active {
-	font-weight: 600;
+  font-weight: 600;
 }
 
 .header .logo {
-	font-size      : 2.4em;
-	font-weight    : bold;
-	display        : block;
-	float          : left;
-	padding        : 1rem 0 1rem 1rem;
-	text-decoration: none;
-	letter-spacing : -.08rem;
-	color          : #ef5419;
+  font-size: 2.4em;
+  font-weight: bold;
+  display: block;
+  float: left;
+  padding: 1rem 0 1rem 1rem;
+  text-decoration: none;
+  letter-spacing: -0.08rem;
+  color: #ef5419;
 }
 /* menu */
 .header .menu {
-	clear     : both;
-	max-height: 0;
-	transition: max-height 0.2s ease-out;
+  clear: both;
+  max-height: 0;
+  transition: max-height 0.2s ease-out;
 }
 /* menu icon */
 .header .menu-icon {
-	position   : relative;
-	display    : inline-block;
-	float      : right;
-	padding    : 25px 20px;
-	cursor     : pointer;
-	user-select: none;
+  position: relative;
+  display: inline-block;
+  float: right;
+  padding: 25px 20px;
+  cursor: pointer;
+  user-select: none;
 }
 
 .header .menu-icon .navicon {
-	position  : relative;
-	display   : block;
-	width     : 18px;
-	height    : 2px;
-	transition: background 0.2s ease-out;
-	background: #001b44;
+  position: relative;
+  display: block;
+  width: 18px;
+  height: 2px;
+  transition: background 0.2s ease-out;
+  background: #001b44;
 }
 
 .header .menu-icon .navicon:after,
 .header .menu-icon .navicon:before {
-	position  : absolute;
-	display   : block;
-	width     : 100%;
-	height    : 100%;
-	content   : '';
-	transition: all 0.2s ease-out;
-	background: #001b44;
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  content: '';
+  transition: all 0.2s ease-out;
+  background: #001b44;
 }
 
 .header .menu-icon .navicon:before {
-	top: 6px;
+  top: 6px;
 }
 
 .header .menu-icon .navicon:after {
-	top: -6px;
+  top: -6px;
 }
 /* menu btn */
 .header .menu-btn {
-	display: none;
+  display: none;
 }
 
 .header.expanded .menu {
-	max-height: 240px;
+  max-height: 240px;
 }
 
 .header.expanded .menu-icon .navicon {
-	background: transparent;
+  background: transparent;
 }
 
 .header.expanded .menu-icon .navicon:before {
-	transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
 
 .header.expanded .menu-icon .navicon:after {
-	transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .header.expanded .menu-icon:not(.steps) .navicon:after,
 .header.expanded .menu-icon:not(.steps) .navicon:before {
-	top: 0;
+  top: 0;
 }
 /* 48em = 768px */
 @media (min-width: 812px) {
-	.header li {
-		float: left;
-	}
+  .header li {
+    float: left;
+  }
 
-	.header li a {
-		padding: 18px 15px;
-	}
+  .header li a {
+    padding: 18px 15px;
+  }
 
-	.header .menu {
-		float     : right;
-		clear     : none;
-		max-height: none;
-	}
+  .header .menu {
+    float: right;
+    clear: none;
+    max-height: 50px;
+    margin-top: -2px;
+  }
 
-	.header .menu-icon {
-		display: none;
-	}
+  .header .menu-icon {
+    display: none;
+  }
 }
